# ExamForge

./: .gitignore  ChangeLog.md  ExamForge.cabal  LICENSE  Makefile  README.md  SPECIFICATION.md  provastyle.sty
app/: Assemble.hs  Assembler.hs  ExamForge.hs  Forge.hs  Main.hs  MockGen.hs  Poc.hs
configs/: EE1.yml  EE2.yml  EET.yml
questions/: EE1.cap-01.yaml  EE1.cap-02.yaml  EE1.cap-03.yaml  EE1.cap-04.yaml  EE1.cap-05.yaml  EE1.cap-06.yaml  EE1.cap-07.yaml  EE1.cap-08.yaml  EE1.cap-09.yaml  EE1.cap-10.yaml  EE1.cap-11.yaml  EE1.cap-12.yaml  EE1.cap-13.yaml  EE1.cap-14.yaml  EE1.cap-15.yaml  EE1.cap-16.yaml  EE1.cap-17.yaml  EE1.cap-18.yaml  EE1.cap-19.yaml  EE1.cap-20.yaml  EE1.cap-21.yaml  EE1.cap-22.yaml  bcc222.banco-de-questões.prova-1.yaml  bcc222.banco-de-questões.prova-2.cap-16.yaml  bcc222.banco-de-questões.prova-2.cap-17.yaml  bcc222.banco-de-questões.prova-2.cap-18.yaml  bcc222.banco-de-questões.prova-2.cap-19.yaml  bcc222.banco-de-questões.prova-2.cap-20.yaml  bcc222.banco-de-questões.prova-2.cap-21.yaml  bcc222.banco-de-questões.prova-2.cap-22.yaml  test-question-1.yml  test-question-2.yml
scripts/: generate_annotation.py  pdf-annotator.sh  prepare_annotation_data.py  prepare_pdf.sh
src/: ExamConfig.hs
src/ExamForge/: Assembler.hs  Exam.hs  ExamConfig.hs  Generator.hs  IR.hs  Mock.hs  Orchestrator.hs  Parser.hs  QuestionBank.hs  Template.hs  Type.hs
src/ExamForge/Evaluator/: C.hs  Class.hs  Cpp.hs  Haskell.hs  Python.hs  Types.hs
src/ExamForge/Formatter/: Latex.hs
src/ExamForge/Jupyter/: Client.hs
