cabal-version:      3.0
name:               ExamForge
version:            0.1.0.0
synopsis:           A template-based, algorithmic exam question generator.
description:
  ExamForge is a polyglot exam generation system. It separates the
  declarative structure of an exam (metadata, selection constraints,
  semantic grouping) from the computational logic of its
  questions. Instructors define parameterized question templates in YAML,
  writing native mathematical computations and string interpolations in
  Python, C, C++, or Haskell. ExamForge orchestrates these scripts securely,
  applies advanced rotation algorithms to ensure fair test variants, and
  outputs fully typeset LaTeX exams and automated grading keys.

license:            MIT
license-file:       LICENSE
author:             José Romildo Malaquias
maintainer:         malaquias@ufop.edu.br
category:           Education, Text Processing
build-type:         Simple
extra-doc-files:
    README.md
    SPECIFICATION.md
    ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/romildo/ExamForge

library
  exposed-modules:
    ExamForge.Assembler
    ExamForge.Evaluator.C
    ExamForge.Evaluator.Class
    ExamForge.Evaluator.Cpp
    ExamForge.Evaluator.Haskell
    ExamForge.Evaluator.Python
    ExamForge.Exam
    ExamForge.ExamConfig
    ExamForge.Formatter.Latex
    ExamForge.IR
    ExamForge.Mock
    ExamForge.Orchestrator
    ExamForge.QuestionBank
    ExamForge.Template

  build-depends:
    , base >=4.12 && <5
    , Glob
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , optparse-applicative
    , pretty-show
    , pretty-simple
    , process
    , random
    , regex-tdfa
    , temporary
    , text
    , yaml

  hs-source-dirs:   src

  default-language: Haskell2010

executable examforge
  main-is:          ExamForge.hs

  build-depends:
    , base >=4.12 && <5
    , ExamForge
    , Glob
    , yaml
    , directory
    , filepath
    , aeson
    , pretty-show
    , pretty-simple
    , optparse-applicative
    , containers
    , text
    , bytestring

  hs-source-dirs:   app

  default-language: Haskell2010
